@@ -21,8 +21,6 @@ use Getopt::Long;
 use VMware::API::LabManager;
 use strict;
 
-my $version = ( split ' ', '$Revision: 2.1 $' )[1];
-
 my ( $username, $password, $server);
 my $orgname   = 'Global';
 my $workspace = 'Main';
